Replaced Google Maps with free OpenStreetMap - no API key needed

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,7 @@
     <div class="side-menu" id="sideMenu">
         <a href="/" class="menu-item active">🏠 Dashboard</a>
         <a href="/live-location" class="menu-item">📍 Live Location Alert</a>
+        <a href="/aqi-map" class="menu-item">🗺️ AQI Map</a>
         <a href="/hospitals" class="menu-item">🏥 Nearest Hospitals</a>
     </div>
 
