Added missing weather data: Visibility, Pressure, Dew Point display

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,22 @@
                     <div class="detail-item">
                         <div class="detail-icon">☀️</div>
                         <div class="detail-label">UV Index</div>
-                        <div class="detail-value">0</div>
+                        <div class="detail-value" id="uvIndex">--</div>
+                    </div>
+                    <div class="detail-item">
+                        <div class="detail-icon">📊</div>
+                        <div class="detail-label">Pressure</div>
+                        <div class="detail-value" id="pressure">--</div>
+                    </div>
+                    <div class="detail-item">
+                        <div class="detail-icon">👁️</div>
+                        <div class="detail-label">Visibility</div>
+                        <div class="detail-value" id="visibility">--</div>
+                    </div>
+                    <div class="detail-item">
+                        <div class="detail-icon">💦</div>
+                        <div class="detail-label">Dew Point</div>
+                        <div class="detail-value" id="dewPoint">--</div>
                     </div>
                 </div>
 
